--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
+    <div id="container"></div>
+    <div id="profile">
+      <img
+        src="./assets/avatar.png"
+        alt="logotipo do salão de beleza studio das loiras, borda dourada e fundo preto"
+      />
+    </div>
   </body>
 </html>
