--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     <div id="container"></div>
     <div id="profile">
       <img
-        src="./assets/avatar.png"
+        src="./assets/Avatar.png"
         alt="logotipo do salão de beleza studio das loiras, borda dourada e fundo preto"
       />
+      <p>@nanete_studiodasloiras</p>
     </div>
   </body>
 </html>
