creating list in html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,30 @@
         alt="logotipo do salão de beleza studio das loiras, borda dourada e fundo preto"
       />
       <p>@nanete_studiodasloiras</p>
+
+      <ul>
+        <li>
+          <a
+            href="https://www.instagram.com/nanete_studiodasloiras/"
+            target="_blank"
+            >Visite Nosso Instagram</a
+          >
+        </li>
+
+        <li>
+          <a href="https://wa.me/5511987216714" target="_blank"
+            >Faça o seu Agendamento</a
+          >
+        </li>
+
+        <li>
+          <a
+            href="https://www.google.com.br/maps/place/Largo+do+Comiss%C3%A1rio,+257+-+Vila+Albertina,+S%C3%A3o+Paulo+-+SP,+02731-010/@-23.5004003,-46.6984634,17z/data=!3m1!4b1!4m6!3m5!1s0x94cef848c4140545:0xae97968d352cf018!8m2!3d-23.5004053!4d-46.69385!16s%2Fg%2F11c2c9yk3l?entry=ttu"
+            target="_blank"
+            >Localização</a
+          >
+        </li>
+      </ul>
     </div>
   </body>
 </html>
