--- a/index.html
+++ b/index.html
@@ -15,21 +15,27 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="container"></div>
-    <div id="profile">
-      <img
-        src="./assets/Avatar.png"
-        alt="logotipo do salão de beleza studio das loiras, borda dourada e fundo preto"
-      />
-      <p>@nanete_studiodasloiras</p>
+    <div id="container">
+      <div id="profile">
+        <img
+          src="./assets/Avatar.png"
+          alt="logotipo do salão de beleza studio das loiras, borda dourada e fundo preto"
+        />
 
+        <h3>A BELEZA AO SEU ALCANCE!!!</h3>
+        <ul>
+          <li><span>♥ Especialista em Loiros e Mechas</span></li>
+          <li><span>♥ Bronzeamento Artificial Legalizado</span></li>
+          <li><span>♥ Lash Lifting Designer</span></li>
+        </ul>
+      </div>
       <ul>
         <li>
           <a
             href="https://www.instagram.com/nanete_studiodasloiras/"
             target="_blank"
-            >Visite Nosso Instagram</a
-          >
+            >Conheça Nossos Trabalhos
+          </a>
         </li>
 
         <li>
@@ -47,5 +53,7 @@
         </li>
       </ul>
     </div>
+    <div id="line"></div>
+    <footer>♥ Estamos esperando sua Visita ♥</footer>
   </body>
 </html>
